# Omni-Tune

./: .gitignore  CHANGELOG.md  README.md  TUTORIAL.md  WRITEUP.md
.github/workflows/: build.yml
omni-profile-editor/: build-helper.ps1  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
omni-profile-editor/scripts/: run.js
omni-profile-editor/src/main/: index.ts  ipcHandlers.ts  prefs.ts  profileManager.ts  vrOverlay.ts
omni-profile-editor/src/preload/: index.ts
omni-profile-editor/src/renderer/: index.html
omni-profile-editor/src/renderer/src/: App.tsx  index.css  params.ts  themes.ts
omni-profile-editor/src/renderer/src/components/: FirstRunWizard.tsx  GameList.tsx  PresetsPanel.tsx  ProfileEditor.tsx  Sidebar.tsx  SpeedCurveChart.tsx  Toast.tsx  VrButton.tsx  VrEditor.tsx  VrSlider.tsx  WhatsNewModal.tsx
omni-profile-editor/src/renderer/src/lib/: gameLibraryState.ts  localStorage.ts
omni-profile-editor/src/renderer/src/store/: useAppStore.ts  usePresetsStore.ts  useToastStore.ts  useVrStore.ts
omni-profile-editor/src/renderer/src/types/: api.d.ts
omni-profile-editor/vr-helper/: CMakeLists.txt  main.cpp
